<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_reps_button_text">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elecs_button_text">UPCOMING ELECTIONS</string>
    <string name="upcoming_elecs_title_text">Upcoming Elections</string>
    <string name="saved_elecs_title_text">Saved Elections</string>
    <string name="save_button_text">Follow Election</string>
    <string name="unfollow_button_text">Unfollow Election</string>
    <string name="search_title_text">Representative Search</string>
    <string name="line_1">Line 1</string>
    <string name="line_2_optional">Line 2 (Optional)</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="img_description">img_description</string>
    <string name="no_internet_connection_msg">Please Check Your internet Connection</string>

</resources>
